// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Daylight when sunset is after sunrise 1`] = `
<DocumentFragment>
  <div
    class="progressBarWrapper"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="383.87491666666665"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 26.658%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="768.6333333333333"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 53.377%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="287.49175"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 19.965%;"
      />
    </div>
    <div
      class="labels"
    >
      <div
        class="startHour"
      >
        00:00
      </div>
      <div
        class="endHour"
      >
        23:59
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders Daylight when sunset is after sunrise 2`] = `
<DocumentFragment>
  <div
    class="progressBarWrapper"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="432.5083"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 30.035%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="671.3666666666667"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 46.623%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="335.1250333333333"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 23.273%;"
      />
    </div>
    <div
      class="labels"
    >
      <div
        class="startHour"
      >
        00:00
      </div>
      <div
        class="endHour"
      >
        23:59
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders DaylightAcrossDays 1`] = `
<DocumentFragment>
  <div
    class="progressBarWrapper"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="1152.5083"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 80.035%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="-768.6333333333333"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: -53.377%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="1055.1250333333332"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 73.273%;"
      />
    </div>
    <div
      class="labels"
    >
      <div
        class="startHour"
      >
        00:00
      </div>
      <div
        class="endHour"
      >
        23:59
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders DaylightDuringDay 1`] = `
<DocumentFragment>
  <div
    class="progressBarWrapper"
  >
    <div
      class="progress"
    >
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="383.87491666666665"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 26.658%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="768.6333333333333"
        class="progress-bar bg-warning"
        role="progressbar"
        style="width: 53.377%;"
      />
      <div
        aria-valuemax="1440"
        aria-valuemin="0"
        aria-valuenow="287.49175"
        class="progress-bar bg-success"
        role="progressbar"
        style="width: 19.965%;"
      />
    </div>
    <div
      class="labels"
    >
      <div
        class="startHour"
      >
        00:00
      </div>
      <div
        class="endHour"
      >
        23:59
      </div>
    </div>
  </div>
</DocumentFragment>
`;
